# stonker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
depends/: readme.md
src/brokers/: broker_base.hpp  interactive_brokers.hpp
